--- a/8Puzzle/design/readme.adoc
+++ b/8Puzzle/design/readme.adoc
@@ -1,6 +1,11 @@
-## Design
+# Design
+
+## Data Flow Diagram
+
+image::img/design-8-puzzle-problem-program.svg[]
 
 ## Procedural design
+Pseudocode for the main procedures that will be implemented. For this program to work, each of the BFS, GBFS, IDS, IDSH objects need to override/redefine the work procedure.
 
 [source,pseudo]
 ----
